--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jordan Coe",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^20.10.2"
+    "@types/node": "^20.10.2",
+    "dotenv": "^16.3.1"
   }
 }
